# nusantara2

./: .firebaserc  .gitignore  ARCHITECTURE.md  ARCHITECTURE_MIGRATION_COMPLETE.md  EVALUATION_REPORT_20260420_2102.md  MIGRATION_SUCCESS.md  README.md  TASK_SUMMARY_20260428.txt  UI_EVALUATION_20260420_2136.md  build.gradle.kts  crash_log.txt  crash_log_new.txt  db_script.py  face_assignment_repo_fix.diff  fix.py  fix2.py  fix_imports.py  fix_screen.py  gradle.properties  local_db.sqlite  patch_dashboard.py  patch_dashboard_screen.py  patch_dashboard_vm.py  patch_init.py  rename_package.py  repository_script.py  settings.gradle.kts  ui_script.py  viewmodel_script.py
.claude/: settings.local.json
.qwen/: settings.json
app/: azura-key.jks  build.gradle.kts  google-services.json  proguard-rules.pro
app/schemas/com.example.crashcourse.db.AppDatabase/: 1.json  2.json  3.json
app/schemas/com.example.crashcourse.db.AppDatabase.AppDatabase/: 1.json
app/src/androidTest/java/com/example/crashcourse/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  azura_model_guard.cpp  azura_secure_engine.cpp  azura_security_vault.cpp
app/src/main/java/com/azuratech/azuratime/: AzuraApp.kt  MainActivity.kt  MainApp.kt
app/src/main/res/drawable/: face_outline.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
azura-engine-kmp/: README.md  build.gradle.kts
functions/: package-lock.json
functions/src/: index.ts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+351 files in other folders)
